feat: link device tags with device workflows